subprojects/swen430/src/test/resources/tests/valid/Is_Valid_4.while
int f([int|real] x) {
    if(x is [int]) {
        return 0;
    } else {
        return 1;
    }
}

void main() {
    print f([]);
    print f([1,2,3]);
    print f([1.0,2.0,3.0]);
    print f([1,2.0,3]);
}
