subprojects/swen430/src/test/resources/tests/invalid/Typing_Invalid_20.while
[int] f([int] x, [real] y) {
    return x ++ y;
}
